before the dashboard chnages